<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="@string/double_zeros"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:id="@+id/hoursInput"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/hoursShort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_short"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="@string/double_zeros"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:id="@+id/minutesInput"
            android:textSize="50sp"
           />

        <TextView
            android:id="@+id/minutesShort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes_short"
           />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="@string/double_zeros"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:id="@+id/secondsInput"
            android:textSize="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds_short"
           />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
  >
        <!--MarginLeft is to support Api 17 and less -->

        <TextView android:id="@+id/clearTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_clear"
            android:padding="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView android:id="@+id/cancelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:padding="10dp"
            />

        <TextView android:id="@+id/confirmTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm"
            android:padding="10dp"/>


    </LinearLayout>

</LinearLayout>